feat: user details view expanded

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>Github users browser</title>
+  <title>GitHub users browser</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Github users browser" />
+  <meta name="description" content="GitHub users browser" />
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
